- removed harcoded color - fixed card layout issue

--- a/resources/fervent-ui/Components/badge.css
+++ b/resources/fervent-ui/Components/badge.css
@@ -4,7 +4,7 @@
 
 .badge {
     border-radius: 999px;
-    color: var(--white-text-color);
+    color: var(--white-color);
     display: inline-block;
     position: absolute;
     top: 5px;
