--- a/resources/fervent-ui/Components/buttons.css
+++ b/resources/fervent-ui/Components/buttons.css
@@ -4,7 +4,7 @@
     gap: 10px;
     border: 2px solid var(--primary-color);
     background-color: var(--primary-color);
-    color: var(--white-text-color);
+    color: var(--white-color);
     padding: 0.5rem 1rem;
     border-radius: 5px;
     margin: 0.25rem 0.5rem;
@@ -35,7 +35,7 @@
     border-radius: 50%;
     border: 2px solid var(--primary-color);
     background-color: var(--primary-color);
-    color: var(--white-text-color);
+    color: var(--white-color);
 }
 
 button:hover {
@@ -52,7 +52,7 @@ button:active {
 .secondary-btn:hover {
     background-color: var(--secondary-color);
     border: 2px solid var(--secondary-color);
-    color: var(--white-text-color);
+    color: var(--white-color);
     transition: 0.1s;
     transform: scale(1.03)
 }
