--- a/resources/fervent-ui/Components/forms.css
+++ b/resources/fervent-ui/Components/forms.css
@@ -34,7 +34,7 @@ input, select {
     min-width: 200px;
     max-width: 500px;
     background-color: var(--background-color);
-    border: 2px solid lightgrey;
+    border: 2px solid var(--lightgrey-color);
     border-radius: 4px;
     padding: 0.15rem;
 }
@@ -44,7 +44,7 @@ input:focus {
 }
 
 input:disabled {
-    background-color: lightgrey;
+    background-color: var(--lightgrey-color);
 }
 
 input[type=radio], 
@@ -64,7 +64,7 @@ textarea {
     max-height: 6.5rem;
     outline: none;
     background-color: var(--background-color);
-    border: 2px solid lightgrey;
+    border: 2px solid var(--lightgrey-color);
     border-radius: 10px;
     padding: 0.15rem;
 }
